k8s/pizza-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-app
spec: 
  replicas: 2
  selector:
    matchLabels: 
      app: pizza-app
  template: 
    metadata:
      labels: 
        app: pizza-app
    spec:
      containers:
      - name: pizza-container
        image: pizza-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
