k8s/cake-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: cake-app
spec: 
  selector:
    app: cake-app
  type: NodePort
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 5000
    nodePort: 30001
