k8s/pizza-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: pizza-app
spec: 
  selector:
    app: pizza-app
  type: NodePort
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 5000
    nodePort: 30002
