k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pizza-cake-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mukul.com
    http:
      paths:
      - path: /pizza
        pathType: Prefix
        backend:
          service:
            name: pizza-app
            port:
              number: 80
      - path: /cake
        pathType: Prefix
        backend:
          service:
            name: cake-app
            port:
              number: 80
